WIP. Scrollbar issues.

--- a/csfieldguide/static/interactives/searching-algorithms/scss/searching-algorithms.scss
+++ b/csfieldguide/static/interactives/searching-algorithms/scss/searching-algorithms.scss
@@ -6,7 +6,7 @@
 
 #interactive-searching-algorithms-boxes {
 	display: flex;
-	overflow: scroll;
+	overflow: auto;
 }
 
 #interactive-searching-algorithms-boxes img {
